--- a/post/templates/create_post.html
+++ b/post/templates/create_post.html
@@ -1,6 +1,38 @@
 {% extends "base.html" %}
 {% block content %}
-     <h2>Create a New Post</h2>
+<style>
+    /* Assuming "base.html" provides necessary styling for general layout */
+
+
+
+
+h2 {
+    margin-top: 20px; /* Add top margin */
+    margin-bottom: 20px;
+}
+
+
+button[type="submit"] {
+    padding: 10px 20px;
+    font-size: 1em;
+    background-color:#495057; /* Brown color */
+    color: #fff; /* White text color */
+    border: none;
+    cursor: pointer;
+}
+
+button[type="submit"]:hover {
+   background-color: #696969;
+  font-size: 1.1em;
+}
+
+
+label {
+    font-weight: bold;
+}
+
+</style>
+ <h2>Create a New Post</h2>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
