--- a/post/templates/post_update.html
+++ b/post/templates/post_update.html
@@ -2,6 +2,34 @@
 
 {% extends "base.html" %}
 {% block content %}
+<style>
+
+
+h2 {
+    margin-top: 20px; /* Add top margin */
+    margin-bottom: 20px;
+}
+
+
+button[type="submit"] {
+    padding: 10px 20px;
+    font-size: 1em;
+    background-color:#495057; /* Brown color */
+    color: #fff; /* White text color */
+    border: none;
+    cursor: pointer;
+}
+
+button[type="submit"]:hover {
+   background-color: #696969;
+  font-size: 1.1em;
+}
+
+label {
+    font-weight: bold;
+}
+
+</style>
     <h2>Edit Post</h2>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
